# ucloud-sandboxes-sdk

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: protocol.md
src/ucloud_sandboxes_sdk/: __init__.py  client.py  relay.py  ssh_proxy.py
src/ucloud_sandboxes_sdk/integrations/: __init__.py  inspect.py
tests/: test_client.py  test_inspect_integration.py  test_relay.py  test_ssh_proxy.py
